wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@800&family=Open+Sans&display=swap');

.home-title {
        font-family: 'Noto Sans', 'Open Sans'; 
        font-size: 2em;
}
#content {
        max-width: 1600px; 
        margin: 0 auto;
}
nav {
        text-align: center;
        display: flex;
        justify-content: space-around;
}
.button-box {
        text-align: center;
}
main section {
        text-align: center;
}
main section img {
        box-sizing: border-box;
}
.home-grid {
        display: grid;
        grid-template-columns: repeat(10 1fr);
}
.card-img {
        border: 10px solid #ED6A5A;
        width: 100%;
        transition: transform .5s;
        box-shadow: 5px 5px 10px gray;
}
.card-img:hover {
        opacity: .6;
        transform: scale(1.1);
}
.mountains {
        width: 100%;
        grid-column: 2/7;
        grid-row: 5/8;
        box-shadow: 5px 5px 10px gray;
}
.rivers-card {
        margin: 200px 0;
        grid-column: 2/4;
        grid-row: 2/3;
}
.camping-card {
        margin: 200px 0;
        grid-column: 5/7;
        grid-row: 2/3;
}
.rapids-card {
        margin: 200px 0;
        grid-column: 8/10;
        grid-row: 2/3;
}
#background {
        height: 725px; 
        background-color: #032b43;
        grid-column: 1/11;
        grid-row: 4/9;
}
.msg {
        background-color: #119DA4;
        line-height: 1.5em;
        padding: 35px;
        grid-column: 6/10;
        grid-row: 6/7;
        box-shadow: 5px 5px 10px gray;
}
body {
        background-color: #119DA4;
        font-family: 'Noto sans', 'Open Sans';
        font-size: 22px;
        margin: 0;
        padding: 0;
}
h2 {
        margin: 0;
}
header {
        background-color: #032b43;
        display: grid;
        grid-template-columns: 150px auto;
}
nav a:hover {
        background-color:#ED6A5A; 
        color: #032B43
}
.book {
        background-color: #ED6A5A; 
        color: black; 
        text-decoration: none;
        font-size: 18px;
        padding: 15px 30px;
        margin-top: 50px;
        border-radius: 5px;
}
.join {
        background-color: #ED6A5A; 
        color: #F2F230; 
        text-decoration: none;
        font-size: 18px;
        padding: 15px 30px;
        margin-top: 50px;
        border-radius: 5px;}
.book:hover {
        background-color: #032B43; 
        color: #ED6A5A
}
.join:hover {
        background-color: #032B43; 
        color: #ED6A5A
}
footer {
        background-color: #032b43; 
        color: black;
        padding: 25px 50px;
        margin-top: 200px;
        display: flex;
        justify-content: space-around;
        align-items: center;
}
footer a {
        color: black;    
        text-decoration: none;
}
footer a:hover {
        color: white;
}
footer p {
        font-size: 1.2em;
}
footer p a:hover {
        text-decoration: underline;
}
footer .social img {
        padding-top: 15px;
}
nav a {
        color:#F2F230; 
        text-decoration: none; 
        padding: 35px;
}
.home-title {
        color: black;
        margin-top: 10px;
}
h4 {
        color: black;
}
.msg h2 {
        color: black; font-family: 'Noto Sans'
}
.msg p {
        color: black;
        font-size: .8em;
        padding-bottom: 15px;
}
.logo {
        width: 80px;
}
.icon {
        width: 80px;
        padding-top: 10px;
}

#hero {
        display: grid;
        grid-template-columns: 1fr 3fr 1fr;
        margin-top: -100px;
}
#hero-img {
        width: 100%;
}
#hero-msg h1{
        text-align: center;
        color: white;
}
#hero-msg h4 {
        text-align: center;
        color: white;
}
#hero-box {
        grid-column: 1/4;
        grid-row: 1/3;
        z-index: -1;
}
#hero-msg {
        grid-column: 2/3;
        grid-row: 1/2;
        margin-top: 100px;
}
#logo_link {
        padding-top: 5px;
        justify-self: center;
        align-self: center;
}


        @media screen and (max-width: 900px) {
                #hero, .home-grid {
                    display: block;
                    height: auto;
                }
                nav, footer {
                    flex-direction: column;
                }
                nav a {
                    display: block;
                    padding: 15px;
                }
                #hero {
                    margin-top: 0;
                }
                #hero-msg {
                    margin-top: 0;
                }
                #hero-msg h4 {
                    display: none;
                }
                #hero-msg h1 {
                    color: #6f7364;
                }
                .home-title {
                    font-size: 25px;
                }
                .rivers-card, .camping-card, .rapids-card { 
                    margin: 50px auto;
                    width: 60%;
                }
                #background {
                    display: none;
                }
                .mountains, .msg {
                    width: 80%;
                    display: block;
                    margin: 0 auto;
                }
                footer {
                    margin-top: 25px;
                }
            }

